[gd_scene load_steps=4 format=3 uid="uid://crxdmhhua4w7g"]

[ext_resource type="Script" uid="uid://dth768skbff1a" path="res://src/scripts/player.gd" id="1_gmfve"]
[ext_resource type="Texture2D" uid="uid://r2miduqpobqa" path="res://icon.svg" id="2_ehvfd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ykrsh"]
size = Vector2(128.205, 127.854)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.156, 0.219)
safe_margin = 0.3
script = ExtResource("1_gmfve")

[node name="CharSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_ehvfd")

[node name="CharCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ykrsh")

[node name="timeslowTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
ignore_time_scale = true

[node name="timeslowRecovery" type="Timer" parent="."]
one_shot = true

[node name="dashRecovery" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="timeslowTimer" to="." method="_on_timeslowTimeout"]
[connection signal="timeout" from="timeslowRecovery" to="." method="_on_timeslow_recovery"]
[connection signal="timeout" from="dashRecovery" to="." method="_on_dash_recovery"]
